duniverse/menhirLib.20200211/test/static/bad/terminal-type.mly
%token A
%type<int> A
%start<unit> t
%%

t: A {}
